src/toolkit/themes/shared/zen-popup.css
/* ... */
#editBookmarkPanel::part(content) {
  display: flex;
  flex-direction: row !important;
}

#zenEditBookmarkPanelFavicon {
  width: 20px;
  height: 20px;
}

#editBookmarkPanel .panel-header {
  min-height: 0 !important;
  padding-bottom: 0;
  padding-top: 16px;
}

#editBMPanel_namePicker {
  width: -moz-available;
}

label.editBMPanel_folderRow,
label.editBMPanel_nameRow {
  min-width: 60px;
}

hbox.editBMPanel_folderRow {
  width: -moz-available;
}

.zenEditBMPanel_fieldContainer:not(:first-child) {
  margin-top: 10px;
}

.zenEditBMPanel_fieldContainer {
  align-items: center;
}

#editBookmarkPanelBottomContent {
  display: none;
}

:host(:not([native])) #label-box {
  font-weight: 500 !important;
}

#editBMPanel_folderMenuList::part(icon) {
  margin-right: 10px;
}

/**/

#unified-extensions-manage-extensions {
  padding-left: 20px;
}

#identity-popup-clear-sitedata-footer {
  margin-bottom: 0 !important; 
  padding-top: 0 !important;
}

/* Dialog box */

.printDialogBox {
  max-width: 90vw !important;
}

.printSettingsBrowser {
  min-width: 350px !important;
}

/* Context menu */
menu, menuitem {
  &:where([_moz-menuactive]:not([disabled="true"])) {
    background-color: var(--button-hover-bgcolor);
  }
}

/** Unified Extensions View */

#unified-extensions-view {
  --uei-icon-size: 16px !important;

  .unified-extensions-item {
    margin-block: 0 !important;
    border-radius: var(--arrowpanel-menuitem-border-radius) !important;

    > .unified-extensions-item-action-button {
      .unified-extensions-item-message-deck {
        display: none;
      }

      &:hover {
        background-color: initial !important;
      }
    }

    > .unified-extensions-item-menu-button {
      list-style-image: url("chrome://global/skin/icons/more.svg") !important;
      padding: 0 !important;

      > .toolbarbutton-icon {
        padding: var(--arrowpanel-menuitem-padding-block) var(--arrowpanel-menuitem-padding-inline) !important;
        border: none !important;
        opacity: 0;
      }

      &:hover {

        > .toolbarbutton-icon {
          background-color: initial !important;
        }

        &:active {
          color: var(--button-primary-hover-bgcolor) !important;
        }
      }
    }

    &:hover {
      background-color: var(--panel-item-hover-bgcolor);

      > .unified-extensions-item-menu-button > .toolbarbutton-icon {
        opacity: 1;
      }
    }

    &:has(> .unified-extensions-item-action-button:not([disabled]):hover:active) {
      background-color: var(--panel-item-active-bgcolor);
    }
  }
}

